[package]
name = "anthem"
version = "1.0.0-beta.4"
authors = ["Patrick Lühne <patrick@luehne.de>"]
edition = "2018"

[dependencies]
atty = "0.2"
foliage = {git = "https://github.com/potassco/foliage", tag = "v0.2.0-beta.1"}
itertools = "0.9"
log = "0.4"
pretty_env_logger = "0.4"
regex = "1"
structopt = "0.3"
termcolor = "1.1"

[dependencies.clingo]
git = "https://github.com/ZachJHansen/clingo-rs"
rev = "7770a5cadd43b57bdc22a07fe48cf4144ed86f8a"
